// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`@/component/posters/as-figure.vue > Renders > A new poster 1`] = `
<figure
  class="poster"
  new_poster="[object Object]"
>
  <figcaption>
    <!--v-if-->
    <!--v-if-->
  </figcaption>
  <as-svg-stub
    focusable="false"
    itemid="/+14151234356/posters/1737178477987"
  />
  <!--v-if-->
</figure>
`;

exports[`@/component/posters/as-figure.vue > Renders > A poster 1`] = `
<figure
  class="poster"
>
  <figcaption>
    <!--v-if-->
    <!--v-if-->
  </figcaption>
  <as-svg-stub
    focusable="false"
    itemid="/+14151234356/posters/1737178477987"
  />
  <!--v-if-->
</figure>
`;
